fix: z-index 문제 해결

--- a/src/app/components/streaming/[id]/seminarSummaryPopup.module.scss
+++ b/src/app/components/streaming/[id]/seminarSummaryPopup.module.scss
@@ -11,7 +11,7 @@
 }
 
 .modal {
-  z-index: 50;
+  z-index: 101;
   background-color: #fff;
   max-width: 280px;
   padding: 0 1.5rem 1.5rem 1.5rem;
